// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraggle Rock API navigation should compute both snapshot & timespan results 1`] = `
Array [
  "is-on-https",
  "service-worker",
  "viewport",
  "first-contentful-paint",
  "largest-contentful-paint",
  "first-meaningful-paint",
  "speed-index",
  "screenshot-thumbnails",
  "final-screenshot",
  "total-blocking-time",
  "max-potential-fid",
  "cumulative-layout-shift",
  "errors-in-console",
  "server-response-time",
  "interactive",
  "user-timings",
  "critical-request-chains",
  "redirects",
  "installable-manifest",
  "apple-touch-icon",
  "splash-screen",
  "themed-omnibox",
  "maskable-icon",
  "content-width",
  "image-aspect-ratio",
  "image-size-responsive",
  "preload-fonts",
  "deprecations",
  "mainthread-work-breakdown",
  "bootup-time",
  "uses-rel-preload",
  "uses-rel-preconnect",
  "font-display",
  "diagnostics",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "main-thread-tasks",
  "metrics",
  "performance-budget",
  "timing-budget",
  "resource-summary",
  "third-party-summary",
  "third-party-facades",
  "largest-contentful-paint-element",
  "lcp-lazy-loaded",
  "layout-shift-elements",
  "long-tasks",
  "no-unload-listeners",
  "non-composited-animations",
  "unsized-images",
  "valid-source-maps",
  "preload-lcp-image",
  "csp-xss",
  "full-page-screenshot",
  "script-treemap-data",
  "pwa-cross-browser",
  "pwa-page-transitions",
  "pwa-each-page-has-url",
  "accesskeys",
  "aria-allowed-attr",
  "aria-command-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr-value",
  "aria-valid-attr",
  "button-name",
  "bypass",
  "color-contrast",
  "definition-list",
  "dlitem",
  "document-title",
  "duplicate-id-active",
  "duplicate-id-aria",
  "form-field-multiple-labels",
  "frame-title",
  "heading-order",
  "html-has-lang",
  "html-lang-valid",
  "image-alt",
  "input-image-alt",
  "label",
  "link-name",
  "list",
  "listitem",
  "meta-refresh",
  "meta-viewport",
  "object-alt",
  "tabindex",
  "td-headers-attr",
  "th-has-data-cells",
  "valid-lang",
  "video-caption",
  "custom-controls-labels",
  "custom-controls-roles",
  "focus-traps",
  "focusable-controls",
  "interactive-element-affordance",
  "logical-tab-order",
  "managed-focus",
  "offscreen-content-hidden",
  "use-landmarks",
  "visual-order-follows-dom",
  "uses-long-cache-ttl",
  "total-byte-weight",
  "offscreen-images",
  "render-blocking-resources",
  "unminified-css",
  "unminified-javascript",
  "unused-css-rules",
  "unused-javascript",
  "modern-image-formats",
  "uses-optimized-images",
  "uses-text-compression",
  "uses-responsive-images",
  "efficient-animated-content",
  "duplicated-javascript",
  "legacy-javascript",
  "doctype",
  "charset",
  "dom-size",
  "geolocation-on-start",
  "inspector-issues",
  "no-document-write",
  "no-vulnerable-libraries",
  "js-libraries",
  "notification-on-start",
  "password-inputs-can-be-pasted-into",
  "uses-http2",
  "uses-passive-event-listeners",
  "meta-description",
  "http-status-code",
  "font-size",
  "link-text",
  "crawlable-anchors",
  "is-crawlable",
  "robots-txt",
  "tap-targets",
  "hreflang",
  "plugins",
  "canonical",
  "structured-data",
]
`;

exports[`Fraggle Rock API navigation should compute results with callback requestor 1`] = `
Array [
  "is-on-https",
  "service-worker",
  "viewport",
  "first-contentful-paint",
  "largest-contentful-paint",
  "first-meaningful-paint",
  "speed-index",
  "screenshot-thumbnails",
  "final-screenshot",
  "total-blocking-time",
  "max-potential-fid",
  "cumulative-layout-shift",
  "errors-in-console",
  "server-response-time",
  "interactive",
  "user-timings",
  "critical-request-chains",
  "redirects",
  "installable-manifest",
  "apple-touch-icon",
  "splash-screen",
  "themed-omnibox",
  "maskable-icon",
  "content-width",
  "image-aspect-ratio",
  "image-size-responsive",
  "preload-fonts",
  "deprecations",
  "mainthread-work-breakdown",
  "bootup-time",
  "uses-rel-preload",
  "uses-rel-preconnect",
  "font-display",
  "diagnostics",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "main-thread-tasks",
  "metrics",
  "performance-budget",
  "timing-budget",
  "resource-summary",
  "third-party-summary",
  "third-party-facades",
  "largest-contentful-paint-element",
  "lcp-lazy-loaded",
  "layout-shift-elements",
  "long-tasks",
  "no-unload-listeners",
  "non-composited-animations",
  "unsized-images",
  "valid-source-maps",
  "preload-lcp-image",
  "csp-xss",
  "full-page-screenshot",
  "script-treemap-data",
  "pwa-cross-browser",
  "pwa-page-transitions",
  "pwa-each-page-has-url",
  "accesskeys",
  "aria-allowed-attr",
  "aria-command-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr-value",
  "aria-valid-attr",
  "button-name",
  "bypass",
  "color-contrast",
  "definition-list",
  "dlitem",
  "document-title",
  "duplicate-id-active",
  "duplicate-id-aria",
  "form-field-multiple-labels",
  "frame-title",
  "heading-order",
  "html-has-lang",
  "html-lang-valid",
  "image-alt",
  "input-image-alt",
  "label",
  "link-name",
  "list",
  "listitem",
  "meta-refresh",
  "meta-viewport",
  "object-alt",
  "tabindex",
  "td-headers-attr",
  "th-has-data-cells",
  "valid-lang",
  "video-caption",
  "custom-controls-labels",
  "custom-controls-roles",
  "focus-traps",
  "focusable-controls",
  "interactive-element-affordance",
  "logical-tab-order",
  "managed-focus",
  "offscreen-content-hidden",
  "use-landmarks",
  "visual-order-follows-dom",
  "uses-long-cache-ttl",
  "total-byte-weight",
  "offscreen-images",
  "render-blocking-resources",
  "unminified-css",
  "unminified-javascript",
  "unused-css-rules",
  "unused-javascript",
  "modern-image-formats",
  "uses-optimized-images",
  "uses-text-compression",
  "uses-responsive-images",
  "efficient-animated-content",
  "duplicated-javascript",
  "legacy-javascript",
  "doctype",
  "charset",
  "dom-size",
  "geolocation-on-start",
  "inspector-issues",
  "no-document-write",
  "no-vulnerable-libraries",
  "js-libraries",
  "notification-on-start",
  "password-inputs-can-be-pasted-into",
  "uses-http2",
  "uses-passive-event-listeners",
  "meta-description",
  "http-status-code",
  "font-size",
  "link-text",
  "crawlable-anchors",
  "is-crawlable",
  "robots-txt",
  "tap-targets",
  "hreflang",
  "plugins",
  "canonical",
  "structured-data",
]
`;

exports[`Fraggle Rock API snapshot should compute accessibility results on the page as-is 1`] = `
Array [
  "viewport",
  "image-aspect-ratio",
  "image-size-responsive",
  "unsized-images",
  "full-page-screenshot",
  "accesskeys",
  "aria-allowed-attr",
  "aria-command-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr-value",
  "aria-valid-attr",
  "button-name",
  "bypass",
  "color-contrast",
  "definition-list",
  "dlitem",
  "document-title",
  "duplicate-id-active",
  "duplicate-id-aria",
  "form-field-multiple-labels",
  "frame-title",
  "heading-order",
  "html-has-lang",
  "html-lang-valid",
  "image-alt",
  "input-image-alt",
  "label",
  "link-name",
  "list",
  "listitem",
  "meta-refresh",
  "meta-viewport",
  "object-alt",
  "tabindex",
  "td-headers-attr",
  "th-has-data-cells",
  "valid-lang",
  "video-caption",
  "custom-controls-labels",
  "custom-controls-roles",
  "focus-traps",
  "focusable-controls",
  "interactive-element-affordance",
  "logical-tab-order",
  "managed-focus",
  "offscreen-content-hidden",
  "use-landmarks",
  "visual-order-follows-dom",
  "doctype",
  "dom-size",
  "no-vulnerable-libraries",
  "js-libraries",
  "password-inputs-can-be-pasted-into",
  "meta-description",
  "font-size",
  "link-text",
  "crawlable-anchors",
  "robots-txt",
  "tap-targets",
  "plugins",
  "structured-data",
  "uses-responsive-images-snapshot",
]
`;

exports[`Fraggle Rock API startTimespan should compute ConsoleMessage results across a span of time 1`] = `
Array [
  "is-on-https",
  "screenshot-thumbnails",
  "final-screenshot",
  "total-blocking-time",
  "cumulative-layout-shift",
  "errors-in-console",
  "user-timings",
  "image-aspect-ratio",
  "image-size-responsive",
  "preload-fonts",
  "deprecations",
  "mainthread-work-breakdown",
  "bootup-time",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "main-thread-tasks",
  "resource-summary",
  "third-party-summary",
  "layout-shift-elements",
  "long-tasks",
  "no-unload-listeners",
  "non-composited-animations",
  "unsized-images",
  "valid-source-maps",
  "full-page-screenshot",
  "script-treemap-data",
  "uses-long-cache-ttl",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unused-css-rules",
  "unused-javascript",
  "modern-image-formats",
  "uses-optimized-images",
  "uses-text-compression",
  "uses-responsive-images",
  "efficient-animated-content",
  "duplicated-javascript",
  "legacy-javascript",
  "inspector-issues",
  "no-document-write",
  "uses-http2",
  "uses-passive-event-listeners",
  "experimental-interaction-to-next-paint",
  "work-during-interaction",
]
`;

exports[`Fraggle Rock API startTimespan should compute ConsoleMessage results across a span of time 2`] = `
Array [
  "user-timings",
  "preload-fonts",
  "third-party-summary",
  "non-composited-animations",
  "unsized-images",
]
`;

exports[`Fraggle Rock API startTimespan should compute results from timespan after page load 1`] = `
Array [
  "is-on-https",
  "screenshot-thumbnails",
  "final-screenshot",
  "total-blocking-time",
  "cumulative-layout-shift",
  "errors-in-console",
  "user-timings",
  "image-aspect-ratio",
  "image-size-responsive",
  "preload-fonts",
  "deprecations",
  "mainthread-work-breakdown",
  "bootup-time",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "main-thread-tasks",
  "resource-summary",
  "third-party-summary",
  "layout-shift-elements",
  "long-tasks",
  "no-unload-listeners",
  "non-composited-animations",
  "unsized-images",
  "valid-source-maps",
  "full-page-screenshot",
  "script-treemap-data",
  "uses-long-cache-ttl",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unused-css-rules",
  "unused-javascript",
  "modern-image-formats",
  "uses-optimized-images",
  "uses-text-compression",
  "uses-responsive-images",
  "efficient-animated-content",
  "duplicated-javascript",
  "legacy-javascript",
  "inspector-issues",
  "no-document-write",
  "uses-http2",
  "uses-passive-event-listeners",
  "experimental-interaction-to-next-paint",
  "work-during-interaction",
]
`;

exports[`Fraggle Rock API startTimespan should compute results from timespan after page load 2`] = `
Array [
  "user-timings",
  "preload-fonts",
  "network-rtt",
  "network-server-latency",
  "third-party-summary",
  "non-composited-animations",
  "unsized-images",
  "unminified-css",
  "unminified-javascript",
  "unused-css-rules",
  "unused-javascript",
  "modern-image-formats",
  "uses-optimized-images",
  "uses-text-compression",
  "uses-responsive-images",
  "efficient-animated-content",
  "duplicated-javascript",
  "legacy-javascript",
]
`;
